--- a/src/styles/WordleHelper.css
+++ b/src/styles/WordleHelper.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -23,4 +23,14 @@
 
 .letter {
   width:20px;
+}
+
+h1 {
+  margin-block-start: 0.2em;
+  margin-block-end: 0.2em;
+}
+
+h2 {
+  margin-block-start: 0.4em;
+  margin-block-end: 0.2em;
 }
