--- a/src/styles/WordleHelper.css
+++ b/src/styles/WordleHelper.css
@@ -12,9 +12,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 3vmin);
   color: white;
 
+}
+
+.App-header, .results {
+  max-width: 380px;
 }
 
 .results {
@@ -47,10 +51,11 @@
 }
 
 .letter {
-  width:20px;
+  width:30px;
 }
 
 h1 {
+  font-size: 3rem;
   margin-block-start: 0.2em;
   margin-block-end: 0.2em;
 }
@@ -59,3 +64,8 @@ h2 {
   margin-block-start: 0.4em;
   margin-block-end: 0.2em;
 }
+
+input[type="text"] {
+  font-size:25px;
+}
+
