--- a/src/styles/WordleHelper.css
+++ b/src/styles/WordleHelper.css
@@ -51,7 +51,7 @@
 }
 
 .letter {
-  width:30px;
+  width:2em;
 }
 
 h1 {
@@ -65,7 +65,8 @@ h2 {
   margin-block-end: 0.2em;
 }
 
-input[type="text"] {
+input {
   font-size:25px;
+  text-align: center;
 }
 
