--- a/src/styles/WordleHelper.css
+++ b/src/styles/WordleHelper.css
@@ -3,11 +3,12 @@
   width: 100vw;
   height: 100vh;
   overflow-x:hidden;
+  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .App, .App-header {
   text-align: center;
-  background-color: #282c34;
+  background-color: #121212;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +19,7 @@
 }
 
 .App-header, .results {
-  max-width: 380px;
+  max-width: 90vw;
 }
 
 .results {
@@ -52,10 +53,23 @@
 
 .letter {
   width:2em;
+  background-color: #538d4e;
+  margin: 0 .1em;
+  caret-color: transparent;
+}
+
+.misplaced {
+  background-color: #b59f3b;
+}
+
+.rejects {
+  background-color: #3a3a3a;
 }
 
 h1 {
   font-size: 3rem;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-weight: bold;
   margin-block-start: 0.2em;
   margin-block-end: 0.2em;
 }
@@ -66,7 +80,34 @@ h2 {
 }
 
 input {
-  font-size:25px;
+  color: white;
+  font-size:1em;
+  font-weight: bold;
   text-align: center;
+  border: none;
+  border-radius: 0;
+  margin: 0;
+  height: 2em;
+  letter-spacing: 5px;
+  transition: transform 0.3s ease-in-out;
 }
 
+input.misplaced,input.rejects {
+  width: 10.8em;
+}
+
+input:focus {
+  outline: thick solid white;
+}
+
+input.letter:focus {
+  transform: scale(1.2);
+}
+
+input.misplaced:focus,input.rejects:focus {
+  transform: scale(1.05, 1.2);
+}
+
+input::selection {
+  background: none;
+}
